--- a/index.html
+++ b/index.html
@@ -3,16 +3,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Hello ts and react!</title>
+    <title>TODO</title>
   </head>
   <body>
-    <div id="example"></div>
+    <div id="root"></div>
 
     <!-- Dependencies -->
     <script src="./node_modules/react/umd/react.development.js"></script>
     <script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
-
-    <!-- Main -->
-    <script src="./dist/bundle.js"></script>
   </body>
 </html>
